--- a/splitImage/index.css
+++ b/splitImage/index.css
@@ -62,6 +62,7 @@ body {
 .side.left button {
   position: absolute;
   top: 55%;
+  left:40%;
   font-size: 20px;
   border: 2px solid rgb(232, 231, 231);
   background-color: rgba(200, 63, 63, 0);
@@ -78,6 +79,7 @@ body {
 .side.right button {
   position: absolute;
   top: 55%;
+  left: 45%;
   font-size: 20px;
   border: 2px solid rgb(0, 0, 0);
   background-color: rgba(200, 63, 63, 0);
